--- a/index.html
+++ b/index.html
@@ -27,7 +27,24 @@
         
         <!--=====================  Start Header Area  ====================-->
         <header class="header_area">
-
+            <div class="container">
+                <div class="header">
+                    <div class="logo">
+                        <a href="#">
+                            <img src="assets/images/logo.webp" alt="">
+                        </a>
+                    </div>
+                    <div class="menu">
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Experience</a></li>
+                            <li><a href="#">Arts & Travel Services</a></li>
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Contact</a></li> 
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </header>
         <!--=====================  End Header Area  ====================-->
 
