--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
         <meta property="og:url" content="">
         <meta property="og:image" content="">
 
-        <title>Web Template</title>
-        <link rel="icon" href="assets/images/favicon.png">
+        <title>Asatsuyu || Website</title>
+        <link rel="icon" href="assets/images/logo.webp">
 
         <!-- Bootstrap -->
+        <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
+        <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
         <link rel="stylesheet" href="assets/css/bootstrap.min.css">
         <!-- Fontawesome -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
@@ -30,7 +32,7 @@
             <div class="container">
                 <div class="header">
                     <div class="logo">
-                        <a href="#">
+                        <a href="index.html">
                             <img src="assets/images/logo.webp" alt="">
                         </a>
                     </div>
@@ -39,11 +41,38 @@
                             <li><a href="#">Home</a></li>
                             <li><a href="#">Experience</a></li>
                             <li><a href="#">Arts & Travel Services</a></li>
+                            <li><a href="#">Services</a></li>
                             <li><a href="#">About Us</a></li>
                             <li><a href="#">Contact</a></li> 
+                            <li class="bars_relative"><a href="#" class="bars_icon"><i class="fas fa-bars"></i></a></li> 
                         </ul>
                     </div>
                 </div>
+            </div>
+            <div class="bars_menu">
+                <div class="bars_area_box">
+                    <div class="container">
+                        <div class="row align-items-center">
+                            <div class="col-md-6">
+                                <div class="hum_mneu_logo">
+                                    <a href="#"><img src="assets/images/logo.webp" alt=""></a>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="hum_menu__box">
+                                    <ul>
+                                        <li><a href="#">Home</a></li>
+                                        <li><a href="#">Experience</a></li>
+                                        <li><a href="#">Arts & Travel Services</a></li>
+                                        <li><a href="#">Services</a></li>
+                                        <li><a href="#">About Us</a></li>
+                                        <li><a href="#">Contact</a></li> 
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div> 
             </div>
         </header>
         <!--=====================  End Header Area  ====================-->
@@ -51,9 +80,99 @@
         <main class="main_area"> 
             <!--=====================  Start Banner Area  ====================-->
             <section class="banner_area">
-
+                <div class="banner_carousel owl-carousel owl-theme">
+                    <div class="banner_carousel_item banner_carousel_item_1"> 
+                    </div>
+                    <div class="banner_carousel_item banner_carousel_item_2"> 
+                    </div>
+                    <div class="banner_carousel_item banner_carousel_item_3"> 
+                    </div>
+                </div>
+                <div class="banner_text">
+                    <div class="container">
+                        <div class="banner">
+                            <h2>Japan is a wonderful destination for lots of reasons. A country of endless discovery</h2>
+                        </div>
+                    </div>
+                </div>
             </section>
             <!--=====================  End Banner Area  ====================--> 
+
+            <!--=====================  Start Travel Area  ====================--> 
+            <section class="travel_area section_padding">
+                <div class="container">
+                    <div class="travel_box">
+                        <h3>Luxury Bespoke Travel in Japan</h3>
+                        <p>
+                            Asatsuyu Japan Luxury Travel offers access to exclusive experiences that you won’t find anywhere else, so you can experience the best of Japan’s culture, cuisine, and beauty. Whether you’re looking for a romantic getaway, a family vacation, or solo travel we can make sure you get the most out of your time in Japan.
+                        </p>
+                        <p>Searching and planning to travel takes time. So, We carefully selected luxury accommodations, dining, traditional wellness, and unforgettable experiences for exclusive and luxury travel experiences in Japan. </p>
+                        <div class="text-center mt-5">
+                            <a href="#" class="btn_1">More About Us</a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!--=====================  End Travel Area  ====================--> 
+
+            <!--=====================  Start Experience Area  ====================-->
+            <section class="experience_area section_padding">
+                <div class="container">
+                    <div class="section_title">
+                        <h2>Experience All Seasons in Japan</h2>
+                        <p>We curate a bespoke travel experience in whichever season you choose to explore Japan.</p>
+                    </div>
+                    <div class="experience_box">
+                        <div class="row g-5">
+                            <div class="col-md-3">
+                                <div class="single_experinece">
+                                    <div class="ex_img">
+                                        <img src="assets/images/Home/experience/1.png" alt="">
+                                    </div>
+                                    <div class="experi_single_text">
+                                        <h4>Winter</h4>
+                                        <p>Winter in Japan is a time of enchantment, where snow-kissed landscapes create a serene backdrop for hot springs relaxation.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="single_experinece">
+                                    <div class="ex_img">
+                                        <img src="assets/images/Home/experience/2.png" alt="">
+                                    </div>
+                                    <div class="experi_single_text">
+                                        <h4>Spring</h4>
+                                        <p>Hanami season, a celebration of cherry blossom viewing, paints the landscape with breathtaking hues of pink and white.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="single_experinece">
+                                    <div class="ex_img">
+                                        <img src="assets/images/Home/experience/3.png" alt="">
+                                    </div>
+                                    <div class="experi_single_text">
+                                        <h4>Summer</h4>
+                                        <p>A season that blends history and excitement. With lush landscapes, warm hospitality, and a rich cultural heritage, Japan in summer promises an unforgettable adventure under the sun.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="single_experinece">
+                                    <div class="ex_img">
+                                        <img src="assets/images/Home/experience/4.png" alt="">
+                                    </div>
+                                    <div class="experi_single_text">
+                                        <h4>Autumn</h4>
+                                        <p>Japan's fall foliage transforms the landscape into a captivating tapestry of fiery reds, vivid oranges, and deep yellows. As the leaves gracefully fall, it's a season of serenity and renewal.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section> 
+            <!--=====================  End Experience Area  ====================--> 
         </main>
                 
         <!--=====================  Start Header Area  ====================-->
@@ -70,9 +189,10 @@
         <script src="assets/js/popper.min.js"></script>
         <!-- Bootstrap -->
         <script src="assets/js/bootstrap.min.js"></script>
+        <script src="assets/js/owl.carousel.min.js"></script>
         <!-- Modernizr -->
         <script src="assets/js/modernizr-3.11.2.min.js"></script>
         <!-- Custom JS (Handed)-->
         <script src="assets/js/scripts.js"></script>
     </body>
-</html>
+</html> 
