--- a/index.html
+++ b/index.html
@@ -172,14 +172,61 @@
                     </div>
                 </div>
             </section> 
-            <!--=====================  End Experience Area  ====================--> 
+            <!--=====================  End Experience Area  ====================-->  
+
+            <!--=====================  Start Help Area  ====================--> 
+            <section class="help_area section_padding">
+                <div class="container"> 
+                    <div class="travel_box helped">
+                        <h3>Let us help you experience the beauty of Japan.</h3>
+                        <p>
+                            From snowy winters to blooming springs, sun-soaked summers, and vibrant autmns, Japan 's ever-changing beauty invites you to savor the magic of each season.
+                        </p> 
+                        <div class="text-center mt-5">
+                            <a href="#" class="btn_1">Discover More</a>
+                        </div> 
+                    </div>
+                </div>
+            </section> 
+            <!--=====================  End Help Area  ====================-->  
         </main>
                 
-        <!--=====================  Start Header Area  ====================-->
-        <footer class="footer_area">
-
+        <!--=====================  Start Footer Area  ====================-->
+        <footer class="footer_area section_padding">
+            <div class="container">
+                <div class="footer">
+                    <div class="footer_logo">
+                        <a href="#">
+                            <img src="assets/images/logo.webp" alt="">
+                            <p class="footer_logo">ASATSUYU</p>
+                            <p>japan luzury travel</p>
+                        </a>
+                    </div>
+                    <div class="footer_subscribe">
+                        <h5>Discover more about Japan</h5>
+                        <div class="footer_subs_input">
+                            <input type="text" placeholder="Enter your email for newsletter...">
+                            <button class="btn_1">Subscribe</button>
+                        </div>
+                        <p>Thanks for subscribing!</p>
+                    </div>
+                    <div class="footer_social">
+                        <ul>
+                            <li><p>Connect with us</p></li>
+                            <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                            <li><a href="#"><i class="fa-solid fa-xmark"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-telegram"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
+                        </ul>
+                    </div>
+                    <div class="copy_write_text">
+                        <p>Copyright @ 2023 - All Rights Reserved by Asatsuyu Japan Luxury Travel. <a href="#">Terms & Condition</a> | <a href="#">Privacy Policy</a></p>
+                    </div>
+                </div>
+            </div>
         </footer>
-        <!--=====================  End Header Area  ====================-->
+        <!--=====================  End Footer Area  ====================-->
  
 
 
