--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         
         <!--=====================  Start Header Area  ====================-->
-        <header class="header_area">
+        <header class="header_area extra_header">
             <div class="container">
                 <div class="header">
                     <div class="logo">
@@ -40,8 +40,7 @@
                         <ul>
                             <li class="hide_menu"><a href="#">Home</a></li>
                             <li class="hide_menu"><a href="#">Experience</a></li>
-                            <li class="hide_menu"><a href="#">Arts & Travel Services</a></li>
-                            <li class="hide_menu"><a href="#">Services</a></li>
+                            <li class="hide_menu"><a href="#">Arts & Travel Services</a></li> 
                             <li class="hide_menu"><a href="#">About Us</a></li>
                             <li class="hide_menu"><a href="#">Contact</a></li> 
                             <li class="bars_relative"><a href="#" class="bars_icon"><i class="fas fa-bars"></i></a></li> 
@@ -63,8 +62,7 @@
                                     <ul>
                                         <li><a href="#">Home</a></li>
                                         <li><a href="#">Experience</a></li>
-                                        <li><a href="#">Arts & Travel Services</a></li>
-                                        <li><a href="#">Services</a></li>
+                                        <li><a href="#">Arts & Travel Services</a></li> 
                                         <li><a href="#">About Us</a></li>
                                         <li><a href="#">Contact</a></li> 
                                     </ul>
